{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 50,
  "lineage": "67dcad97-7b7b-d546-03ab-3eb7f54c9712",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "tribecarexercise-default-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:191234494660:security-group/sg-0e25ea2c9f810d2f0",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e25ea2c9f810d2f0",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "191234494660",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-06614048384589fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "tribecarexercise-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099739fa184d0b77c",
            "association_id": "eipassoc-08eed8445d4643fb5",
            "domain": "vpc",
            "id": "eipalloc-099739fa184d0b77c",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-022c3b3959995c9f7",
            "private_dns": "ip-10-0-1-147.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.147",
            "public_dns": "ec2-52-220-111-251.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.220.111.251",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_vpc.tribecarexercise-vpc",
            "aws_internet_gateway.tribecarexercise-internet-gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tribecarexercise-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:191234494660:internet-gateway/igw-055ae3ee29e23bee6",
            "id": "igw-055ae3ee29e23bee6",
            "owner_id": "191234494660",
            "tags": {
              "Name": "tribecarexercise-internet-gateway"
            },
            "tags_all": {
              "Name": "tribecarexercise-internet-gateway"
            },
            "vpc_id": "vpc-06614048384589fd0"
          },
          "dependencies": [
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tribecarexercise-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:191234494660:loadbalancer/app/tribecarexercise-lb/4d9950258a0f743f",
            "arn_suffix": "app/tribecarexercise-lb/4d9950258a0f743f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tribecarexercise-lb-750265799.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:191234494660:loadbalancer/app/tribecarexercise-lb/4d9950258a0f743f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tribecarexercise-lb",
            "security_groups": [
              "sg-0cdcc9d2cd2549909"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-018dd53ffd4dcf8aa"
              },
              {
                "subnet_id": "subnet-01aa1a64b6bb11eb4"
              }
            ],
            "subnets": [
              "subnet-018dd53ffd4dcf8aa",
              "subnet-01aa1a64b6bb11eb4"
            ],
            "vpc_id": "vpc-06614048384589fd0",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_vpc.tribecarexercise-vpc",
            "aws_security_group.tribecarexercise-security-group",
            "aws_subnet.tribecarexercise-subnet-public-a",
            "aws_subnet.tribecarexercise-subnet-public-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tribecarexercise-lb-listener-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:191234494660:listener/app/tribecarexercise-lb/4d9950258a0f743f/c64b60e1227ecc4d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:191234494660:targetgroup/tribecarexercise-lb-tg/09fcd417b21f14ae",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:191234494660:listener/app/tribecarexercise-lb/4d9950258a0f743f/c64b60e1227ecc4d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:191234494660:loadbalancer/app/tribecarexercise-lb/4d9950258a0f743f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.tribecarexercise-subnet-public-a",
            "aws_subnet.tribecarexercise-subnet-public-b",
            "aws_vpc.tribecarexercise-vpc",
            "aws_lb.tribecarexercise-lb",
            "aws_lb_target_group.tribecarexercise-lb-target-group",
            "aws_security_group.tribecarexercise-security-group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tribecarexercise-lb-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:191234494660:targetgroup/tribecarexercise-lb-tg/09fcd417b21f14ae",
            "arn_suffix": "targetgroup/tribecarexercise-lb-tg/09fcd417b21f14ae",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:191234494660:targetgroup/tribecarexercise-lb-tg/09fcd417b21f14ae",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tribecarexercise-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-06614048384589fd0"
          },
          "dependencies": [
            "aws_lb.tribecarexercise-lb",
            "aws_security_group.tribecarexercise-security-group",
            "aws_subnet.tribecarexercise-subnet-public-a",
            "aws_subnet.tribecarexercise-subnet-public-b",
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tribecarexercise-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-099739fa184d0b77c",
            "connectivity_type": "public",
            "id": "nat-0f61e1f1f09464764",
            "network_interface_id": "eni-022c3b3959995c9f7",
            "private_ip": "10.0.1.147",
            "public_ip": "52.220.111.251",
            "subnet_id": "subnet-01aa1a64b6bb11eb4"
          },
          "dependencies": [
            "aws_eip.tribecarexercise-eip",
            "aws_internet_gateway.tribecarexercise-internet-gateway",
            "aws_subnet.tribecarexercise-subnet-public-a",
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tribecarexercise-route-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b7f4856cc1c90b221080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f61e1f1f09464764",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b7f4856cc1c90b22",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.tribecarexercise-eip",
            "aws_internet_gateway.tribecarexercise-internet-gateway",
            "aws_nat_gateway.tribecarexercise-nat-gateway",
            "aws_route_table.tribecarexercise-route-table-private",
            "aws_subnet.tribecarexercise-subnet-public-a",
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "tribecarexercise-route-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-055ae3ee29e23bee6",
            "id": "r-rtb-008b23c0cfc1be7c61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-008b23c0cfc1be7c6",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tribecarexercise-vpc",
            "aws_internet_gateway.tribecarexercise-internet-gateway",
            "aws_route_table.tribecarexercise-route-table-public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tribecarexercise-route-table-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:191234494660:route-table/rtb-0b7f4856cc1c90b22",
            "id": "rtb-0b7f4856cc1c90b22",
            "owner_id": "191234494660",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f61e1f1f09464764",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tribecarexercise-route-table-public"
            },
            "tags_all": {
              "Name": "tribecarexercise-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06614048384589fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tribecarexercise-route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:191234494660:route-table/rtb-008b23c0cfc1be7c6",
            "id": "rtb-008b23c0cfc1be7c6",
            "owner_id": "191234494660",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-055ae3ee29e23bee6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tribecarexercise-route-table-public"
            },
            "tags_all": {
              "Name": "tribecarexercise-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-06614048384589fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tribecarexercise-route-table-association-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095cba2a2a0cacf50",
            "route_table_id": "rtb-0b7f4856cc1c90b22",
            "subnet_id": "subnet-02b01695498da1fc4"
          },
          "dependencies": [
            "aws_route_table.tribecarexercise-route-table-private",
            "aws_subnet.tribecarexercise-subnet-private-a",
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tribecarexercise-route-table-association-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a1be0f22cd57021",
            "route_table_id": "rtb-0b7f4856cc1c90b22",
            "subnet_id": "subnet-0f81e534cff7176b1"
          },
          "dependencies": [
            "aws_vpc.tribecarexercise-vpc",
            "aws_route_table.tribecarexercise-route-table-private",
            "aws_subnet.tribecarexercise-subnet-private-b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tribecarexercise-route-table-association-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0622a93ac6d419e92",
            "route_table_id": "rtb-008b23c0cfc1be7c6",
            "subnet_id": "subnet-01aa1a64b6bb11eb4"
          },
          "dependencies": [
            "aws_route_table.tribecarexercise-route-table-public",
            "aws_subnet.tribecarexercise-subnet-public-a",
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tribecarexercise-route-table-association-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07688606b513fb247",
            "route_table_id": "rtb-008b23c0cfc1be7c6",
            "subnet_id": "subnet-018dd53ffd4dcf8aa"
          },
          "dependencies": [
            "aws_route_table.tribecarexercise-route-table-public",
            "aws_subnet.tribecarexercise-subnet-public-b",
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tribecarexercise-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:191234494660:security-group/sg-0cdcc9d2cd2549909",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ALL",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdcc9d2cd2549909",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tribecarexercise-security-group",
            "name_prefix": "",
            "owner_id": "191234494660",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06614048384589fd0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tribecarexercise-subnet-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:191234494660:subnet/subnet-02b01695498da1fc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-02b01695498da1fc4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191234494660",
            "tags": {
              "Name": "tribecarexercise-subnet-private-a"
            },
            "tags_all": {
              "Name": "tribecarexercise-subnet-private-a"
            },
            "vpc_id": "vpc-06614048384589fd0"
          },
          "dependencies": [
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tribecarexercise-subnet-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:191234494660:subnet/subnet-0f81e534cff7176b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0f81e534cff7176b1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191234494660",
            "tags": {
              "Name": "tribecarexercise-subnet-private-b"
            },
            "tags_all": {
              "Name": "tribecarexercise-subnet-private-b"
            },
            "vpc_id": "vpc-06614048384589fd0"
          },
          "dependencies": [
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tribecarexercise-subnet-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:191234494660:subnet/subnet-01aa1a64b6bb11eb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-01aa1a64b6bb11eb4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191234494660",
            "tags": {
              "Name": "tribecarexercise-subnet-public-a"
            },
            "tags_all": {
              "Name": "tribecarexercise-subnet-public-a"
            },
            "vpc_id": "vpc-06614048384589fd0"
          },
          "dependencies": [
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tribecarexercise-subnet-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:191234494660:subnet/subnet-018dd53ffd4dcf8aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-018dd53ffd4dcf8aa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "191234494660",
            "tags": {
              "Name": "tribecarexercise-subnet-public-b"
            },
            "tags_all": {
              "Name": "tribecarexercise-subnet-public-b"
            },
            "vpc_id": "vpc-06614048384589fd0"
          },
          "dependencies": [
            "aws_vpc.tribecarexercise-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tribecarexercise-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:191234494660:vpc/vpc-06614048384589fd0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac316351d854d882",
            "default_route_table_id": "rtb-031b54e8296d79502",
            "default_security_group_id": "sg-0e25ea2c9f810d2f0",
            "dhcp_options_id": "dopt-ad844fca",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-06614048384589fd0",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-031b54e8296d79502",
            "owner_id": "191234494660",
            "tags": {
              "Name": "tribecarexercise-vpc"
            },
            "tags_all": {
              "Name": "tribecarexercise-vpc"
            }
          }
        }
      ]
    }
  ]
}